Mon May  5 10:31:15 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* #include "factory" instead of include "singfactory"

	* mod2.h.in: define buildin_gmp, if HAVE_GMP and macintosh

Sun May  4 11:14:44 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Added make target mpcheck; Update INSTALL file

	* mpsr_PutPoly.cc (PutRationalNumber): Normalize if number->s == 0
	  and not if number->s == 2

	* mpsr_GetPoly.cc (GetGaloisNumber): Introduced special routines,
	  since npInit op in GetModuloNumber messed things up

Sat May  3 00:07:55 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Makefile.in (CPPFLAGS): put -I. before other CPPFLAGS

	* febase.cc (feFopen): fixed bug in opening library from
	  SINGULAR_DATADIR: SINGULAR_DATADIR is appended to
	  getenv("SINGULARPATH")

	* small mpsr Changes to reflect some name changes of MP Dicts

	* configure.in Makefile.in: new scheme for updating Makefile mod2.h
	  based on time-stamps 

Fri May  2 17:29:32 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* mpsr.h: reflected changes of MP version 1.1.2 (Dicts in MP.h)

	* Fixed small bug in configure.in

Mon Apr 28 21:00:07 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* Added README, INSTALL, COPYING file to distribution

	* tesths.cc (main): slightly changed Singular banner; fixed
	  display of version number

Fri Apr 25 16:59:31 1997  Olaf Bachmann  <obachman@ratchwum.mathematik.uni-kl.de (Olaf Bachmann)>

	* fixed configure.in s.t. sprintf test is correct

	* Changed SingularPath to SINGULARPATH

	* fixed sys/times.h and sys/time.h confusion

	* Various changes to reflect new configure (versions defined in
	  configure.in, changed HAVE_LIBFACTORY into HAVE_FACTORY, data
	  dir is pasted from configure into mod2.h and used from there in
	  feFopen. 
